--- a/spec/tags/frozen/language/variables_tags.txt
+++ b/spec/tags/frozen/language/variables_tags.txt
@@ -2,3 +2,5 @@ fails:Basic assignment allows the assignment of rhs to the lhs using the lhs and
 fails:Basic assignment supports the {|r,| } form of block assignment
 fails:Assigning multiple values calls #to_ary on rhs arg if rhs has only a single arg
 fails:Multiple assignment has the proper return value
+breaks:Multiple assignments with grouping rhs cannot use parameter grouping, it is a syntax error
+breaks:Multiple assignments with splats * on the lhs has to be applied to the last parameter
