--- a/README.rdoc
+++ b/README.rdoc
@@ -7,7 +7,7 @@ Please see LICENSES.txt[link:files/LICENSES_txt.html] in this directory.
 Some prerequisites must be installed on your machine before MagLev can
 run correctly. For details, see the Prerequisites[link:files/docs/prerequisites.html] file in the docs directory.
 
-A MagLev build requires a compatible version of the GemStone 3.x binaries. Use the installer mentioned below to ensure your MagLev and GemStone versions are in sync. Simply cloning this repository could result in an intermediate version that won't run with any GemStone build.
+A MagLev build requires a compatible version of the GemStone 3.x binaries. Use the installer mentioned below to ensure your MagLev and GemStone versions are in sync. Simply cloning this repository could result in an indeterminate state that won't run with any GemStone build.
 
 == Documentation
 
@@ -21,7 +21,7 @@ open html/index.html in your web browser of choice
 === Install MagLev
 
 Once you've downloaded MagLev by running
-<tt>installMaglev-<system>.sh</tt> or <tt>upgradeMaglev-<system>.sh</tt>,
+<tt>installMaglev.sh</tt> or <tt>upgradeMaglev.sh</tt>,
 set your <tt>MAGLEV_HOME</tt> and <tt>PATH</tt> variables:
 
   export MAGLEV_HOME=<path_to_the_directory_containing_this_README>
@@ -36,7 +36,7 @@ The server is started with rake:
 
 === Check status of MagLev server
 
-To check that the MagLev repository server started correctly,
+To check that the MagLev Server started correctly,
 run <tt>rake maglev:status</tt>, or simply, <tt>rake</tt>:
 
   $ cd $MAGLEV_HOME
@@ -44,27 +44,15 @@ run <tt>rake maglev:status</tt>, or simply, <tt>rake</tt>:
 
 If the server is not running, you'll see output like:
 
-  (in /Users/pmclain/projects/MagLev-20645.MacOSX)
-  GemStone server not running.
-  MagLev Parse Server is not running on port 2001
+  (in /congo1/users/monty/MagLev/MagLev-22152.Linux)
+  maglev not running
 
 If a server is running, you'll see output like:
 
-  (in /Users/pmclain/projects/MagLev-20645.MacOSX)
-
-  MAGLEV_HOME = /Users/pmclain/projects/MagLev-20645.MacOSX
+  (in /congo1/users/monty/MagLev/MagLev-22152.Linux)
   Status  Version    Owner    Pid   Port   Started     Type  Name
   ------ --------- --------- ----- ----- ------------ ------ ----
-    OK   3.0.0     pmclain   38889 50377 Dec 08 13:21 Netldi gs64ldi
-    OK   3.0.0     pmclain   38892 60165 Dec 08 13:21 Stone  gs64stone
-    OK   3.0.0     pmclain   38893 60157 Dec 08 13:21 cache  gs64stone@cairo.gemstone.com
-
-  MagLev Parse Server port = 2001
-  COMMAND   PID    USER   FD   TYPE    DEVICE SIZE/OFF NODE NAME
-  ruby    38918 pmclain    3u  IPv6 0x3c524bc      0t0  TCP *:2001 (LISTEN)
-  ruby    38918 pmclain    4u  IPv4 0x6d63e64      0t0  TCP *:2001 (LISTEN)
-
-If the parse server is reported as NOT running, see the troubleshooting[link:files/docs/troubleshooting.html] file.
+    OK   3.0.0     monty     26354 33413 Aug 19 11:32 Stone  maglev
 
 === <tt>maglev-ruby</tt>: Execute a Ruby file
 
@@ -79,7 +67,7 @@ You should now be able to run a simple ruby script:
 
 === <tt>maglev-irb</tt>: Open an interactive maglev shell
 
-MagLev now includes a slightly modified copy of irb called maglev-irb. References in this documentation to maglev-irb currently apply to the deprecated maglev-irb version, temporarily renamed topaz-irb. We'll update the docs soon.
+MagLev now includes a slightly modified copy of irb called maglev-irb. References in this documentation to maglev-irb currently apply to a deprecated maglev-irb version. We'll update the docs soon.
 
 MagLev provides an IRB-like utility, <tt>$MAGLEV_HOME/bin/maglev-irb</tt>.
 It provides a minimal interactive environment with some limitations:
@@ -135,8 +123,6 @@ Applications[link:files/docs/applications.html]:: Sample Ruby apps we're testing
 * set <tt>MAGLEV_HOME</tt> to the full path of this directory, and add
   <tt>$MAGLEV_HOME/bin</tt> to your <tt>PATH</tt>. Then you can use
   <tt>maglev-ruby</tt> etc. from anywhere.
-* if you have multiple installations, set <tt>PARSETREE_PORT</tt> to
-  control which port the parser server listens on
 
 == Ruby code:
 * <tt>src/</tt> and <tt>src/lib/</tt> are both on the require path
