--- a/examples/sinatra/simple_blog/README
+++ b/examples/sinatra/simple_blog/README
@@ -1,19 +1,21 @@
 == Simple Sinatra Blog App for MagLev
 
-This is a very simple blog app that uses Maglev persistence.
+This directory contains two Sinatra apps that can be run either standalone,
+or together.  The apps demonstrate MagLev persistence, and show the MagLev
+ObjectLog.
 
 === Prerequisites
 
 In order to run the applications in this directory, you need to install
 rubygem versions of rack and sinatra (see ../README).
 
-=== To Run the blog:
+=== To Run the combined apps:
 
     $ rake run
 
 Then hit http://localhost:4567/
 
-=== To run the blog manually:
+=== To run either the blog manually:
 
 The app is split into a persistent part, <tt>blog.rb</tt>, and the sinatra
 driver app, <tt>blog_app.rb</tt>.  You need to load <tt>blog.rb</tt> once,
@@ -24,20 +26,28 @@ which will define and persist the classes needed for the app:
 Then run <tt>blog_app.rb</tt> by using rackup
 
   $ cd $MAGLEV_HOME/examples/sinatra/simple_blog
-  $ $MAGLEV_HOME/bin/rackup  # looks for ./config.ru
+  $ $MAGLEV_HOME/bin/rackup  blog.ru
 
 Then hit http://localhost:4567/
 
 === Files
 
-* README  This file
-* blog.rb  The persistent, business classes for the app.  This code is run
+* README      This file
+* Rakefile    A Rakefile to run the various apps
+* blog.rb     The persistent, business classes for the app.  This code is run
   once only.
+* blog.ru     A rackup file for the blog.
 * blog_app.rb The Sinatra app
-* dumpdb.rb  Script that prints the contents of the db to stdout (debugging)
-* txn_wrapper.rb  Rack middleware used by <tt>blog_app.rb</tt> to wrap a
+* commit_code.rb  Code to commit the business logic code to the MagLev repository
+* config.ru   Rackup file to run both the blog and objectlog apps.
+* dumpdb.rb   Script that prints the contents of the db to stdout (debugging)
+* objectlog.ru  Rackup file to run just the objectlog
+* objectlog_app.rb  The object log app
+* public            Web root for the running apps
+* test        Some MiniTest tests for the business logic
+* txn_wrapper.rb Rack middleware used by <tt>blog_app.rb</tt> to wrap a
   transaction around each HTTP request.
-* config.ru is a Rackup file to run the app.
+* views       Sinatra view directory
 
 === To Run the ObjectLogViewer
 
@@ -62,12 +72,12 @@ TODO for the sinatra app
 
 * Get persistence of sinatra and rack working (autoload persistence)
 * Try using shotgun for dev time file reloading (or Rack::Reloader)
-* Get sessions working
+* Get sessions working (Blocked on cookie support)
 * Separate the MaglevModel ane work on it
 * Get a migration for seeding basic data working
 * Performance profiling
-* Sort entries by date
 * Get partials implmented (rendering urls for tags and posts)
+* Add an "about" page that explains the app etc.
 
 === Discussion
 
@@ -77,7 +87,6 @@ facilitate finding them in the DB.  But objects are already unique and have
 a system managed __id__.  But there is a deeper problem with managing an id
 field: How do you coordinate the id across multiple threads/VMs?  The
 original code looked like:
-
 
     class Post
       def self.new(params)
@@ -101,7 +110,6 @@ two VMs try to update the class instance variable <tt>@id</tt>, one will
 commit first, and the other will have to deal with a failed commit.  But
 each VM has unique  post objects with different <tt>__id__</tt>'s (because
 the VM does do the hard work of ensuring globally unique ids for objects.
-
 
 === Credits
 
