--- a/spec/tags/frozen/language/variables_tags.txt
+++ b/spec/tags/frozen/language/variables_tags.txt
@@ -1,6 +1,6 @@
 fails:Basic assignment allows the assignment of rhs to the lhs using the lhs and rhs splat operators simultaneously
 fails:Basic assignment supports the {|r,| } form of block assignment
-fails:Assigning multiple values calls #to_ary on rhs arg if rhs has only a single arg
+fails:Assigning multiple values doen't call #to_ary on RHS arg when the corresponding LHS var is a splat
 fails:Multiple assignment has the proper return value
 breaks:Multiple assignments with grouping rhs cannot use parameter grouping, it is a syntax error
 breaks:Multiple assignments with splats * on the lhs has to be applied to the last parameter
