--- a/src/experimental/mdb/mdb/README
+++ b/src/experimental/mdb/mdb/README
@@ -1,15 +1,13 @@
 = MDB: MagLev Data Base
 
-MDB is a document oriented / object oriented database implemented on the
-MagLev VM and object repository.  Documents are stored in MDB as Plain Old
-Ruby Objects and queries / views are implemented as plain old ruby
-methods.
+MDB is a document / object oriented database implemented on the MagLev VM
+and persistent object repository.  Documents are stored in MDB as Plain Old
+Ruby Objects and queries / views are implemented as plain old ruby methods.
 
 == Features
 
 * Documents are plain old ruby objects
-* Views are defined in Ruby, and can be optionally reduced to JSON for
-  transmission to a web application.
+* Views are defined in Ruby
 * REST api for communicating with the DB (similar to CouchDB)
 * Databases may be indexed on attributes of the documents held in the
   database.
@@ -22,17 +20,10 @@ instances, plus a few methods to get Server information.
 MDB::Database manages a collection of documents, and manages views onto those
 objects.
 
-   posts = Database.new(Post)
-
-   class Post
-
-   end
 == Example
-
 
 == TODO
 
-* 2009-10-01: Move away from using JSON
 * DRb isn't running yet on Maglev (thread.rb mutex clashes with st mutex
   and threading).
 
