--- a/src/experimental/kdtree/README
+++ b/src/experimental/kdtree/README
@@ -19,18 +19,50 @@ run the app:
 
 The following are just back of the envelope numbers, from a single run On a
 2.4GHz Intel Core 2 Duo (MacBook) with 2G Ram.   The test creates a tree of
-one million random locations, and then searches for the nearest 100 points
-to one thousand random locations.
+one million random locations, and then performs one thousand searches for
+the nearest 100 points to a random locations (each of the thousand searches
+is to a different random location).
+
+=== Summary
+
+The times to iterate all nodes and to run of 1,000 queries for the nearest
+100 nodes in Maglev, MRI 1.8.6, MRI 1.9.2 and MRI 1.8.6 + KDTree Gem (C
+implementation) are, fastest to slowest:
+
+    MRI + C-extension gem:
+                             user     system      total        real
+        Time:            0.040000   0.000000   0.040000 (  0.037840)
+        Per Query:       0.000040   0.000000   0.000040 (  0.000038)
+
+    Maglev:
+                             user     system      total        real
+        Time:            0.910000   0.000000   0.910000 (  0.921060)
+        Per Query:       0.000910   0.000000   0.000910 (  0.000921)
+
+    MRI v1_9_2_preview2:
+                             user     system      total        real
+        Time:            3.330000   0.160000   3.490000 (  3.486725)
+        Per Query:       0.003330   0.000160   0.003490 (  0.003487)
+
+    MRI v1_8_6_383:
+                             user     system      total        real
+        Time:           31.170000   0.070000  31.240000 ( 31.293104)
+        Per Query:       0.031170   0.000070   0.031240 (  0.031293)
 
 === MagLev
+
+Detailed results for MagLev.  The MagLev run is broken into two parts,
+since we commit the tree into persistent memory.  That means we can run the
+queries in a different VM than the one that created the data.  MRI is
+forced to create the tree and run the queries in the same VM.
 
     $ rake commit
     == Committing tree2d.rb
     == Creating tree of 1000000 random nodes
                               user     system      total        real
-    Create Random Points  3.960000   0.100000   4.060000 (  4.074485)
-    Create random tree   60.200000   0.530000  60.730000 ( 61.173987)
-    Commit data           2.840000   1.370000   4.210000 ( 16.937614)
+    Create Random Points  4.140000   0.080000   4.220000 (  4.231362)
+    Create random tree   59.690000   0.450000  60.140000 ( 60.294821)
+    Commit data           2.700000   1.050000   3.750000 (  7.259246)
     == Committed tree as Maglev::PERSISTENT_ROOT[:RANDOM_KDTREE]
 
 The times to iterate all nodes and to run of 1,000 queries for the nearest
@@ -39,54 +71,66 @@ The times to iterate all nodes and to run of 1,000 queries for the nearest
     $ rake query
 
                          user     system      total        real
-    Iterate Nodes    1.920000   0.400000   2.320000 (  2.337565)
+    Iterate Nodes    1.980000   0.330000   2.310000 (  2.322787)
 
     1000 queries for 100 nearest nodes
                          user     system      total        real
-    Time:            2.460000   0.010000   2.470000 (  2.512542)
-    Per Query:       0.002460   0.000010   0.002470 (  0.002513)
+    Time:            0.910000   0.000000   0.910000 (  0.921060)
+    Per Query:       0.000910   0.000000   0.000910 (  0.000921)
 
     Tree has 1,000,000 nodes
 
-=== MRI 1.8.6
+=== MRI
 
-Times for ruby 1.8.6 (2008-08-11 patchlevel 287) [i686-darwin9.6.0]
+These are the times for 1.8.6 and 1.9.2:
 
-    $ ruby -Ilib bin/commit.rb
+    $ multiruby -Ilib bin/commit.rb
+
+    VERSION = v1_8_6_383
+    CMD     = ~/.multiruby/install/v1_8_6_383/bin/ruby -Ilib bin/commit.rb
+
     == Creating tree of 1000000 random nodes
                               user     system      total        real
-    Create Random Points  4.530000   0.230000   4.760000 (  4.786161)
-    Create random tree  201.740000   1.110000 202.850000 (204.010685)
+    Create Random Points  4.590000   0.220000   4.810000 (  4.823375)
+    Create random tree  201.370000   0.780000 202.150000 (202.480597)
 
                          user     system      total        real
-    Iterate Nodes    4.840000   0.020000   4.860000 (  4.865622)
+    Iterate Nodes    4.700000   0.010000   4.710000 (  4.705827)
 
     1000 queries for 100 nearest nodes
                          user     system      total        real
-    Time:           36.420000   0.140000  36.560000 ( 36.655521)
-    Per Query:       0.036420   0.000140   0.036560 (  0.036656)
+    Time:           31.170000   0.070000  31.240000 ( 31.293104)
+    Per Query:       0.031170   0.000070   0.031240 (  0.031293)
 
     Tree has 1,000,000 nodes
 
-=== MRI 1.9.1
+    RESULT = 0
 
-Times for ruby 1.9.1p0 (2009-01-30 revision 21907) [i386-darwin9.6.0]
+    VERSION = v1_9_2_preview2
+    CMD     = ~/.multiruby/install/v1_9_2_preview2/bin/ruby -Ilib bin/commit.rb
 
-    $ ruby -Ilib bin/commit.rb
     == Creating tree of 1000000 random nodes
                               user     system      total        real
-    Create Random Points  1.510000   0.100000   1.610000 (  1.618571)
-    Create random tree   49.190000   0.360000  49.550000 ( 49.675214)
+    Create Random Points  1.740000   0.100000   1.840000 (  1.852776)
+    Create random tree   48.690000   0.310000  49.000000 ( 48.980875)
 
                          user     system      total        real
-    Iterate Nodes    0.910000   0.010000   0.920000 (  0.914448)
+    Iterate Nodes    0.800000   0.000000   0.800000 (  0.808343)
 
     1000 queries for 100 nearest nodes
                          user     system      total        real
-    Time:            7.840000   0.110000   7.950000 (  7.970044)
-    Per Query:       0.007840   0.000110   0.007950 (  0.007970)
+    Time:            3.330000   0.160000   3.490000 (  3.486725)
+    Per Query:       0.003330   0.000160   0.003490 (  0.003487)
 
     Tree has 1,000,000 nodes
+
+    RESULT = 0
+
+    TOTAL RESULT = 0 failures out of 2
+
+    Passed: v1_9_2_preview2, v1_8_6_383
+    Failed:
+
 
 === C-Version of KDTree gem, MRI 1.8.6
 
