--- a/README.rdoc
+++ b/README.rdoc
@@ -1,154 +1,84 @@
-== License
+== MagLev Alpha
 
-Please see LICENSES.txt[link:files/LICENSES_txt.html] in this directory.
+=== Minimum Requirements
+* 64-bit hardware. There are no plans for a 32-bit version.
+* 64-bit Linux, Mac OS X, or Solaris X86 operating system
+* a version of rake installed in /usr/bin/rake 
+* root access so you can increase default shared memory settings (only during initial install)
 
 == Getting started
 
-The simplest way to install and run MagLev is to use the
-installer[http://maglev-discussion.googlegroups.com/web/MagLev-installer.zip]
-available from the
-{MagLev Discussion Google Group}[http://groups.google.com/group/maglev-discussion/].
-This installer/updater creates a separate (sub)directory for each new version of MagLev.
+Create a MagLev directory. Its name doesn't matter. Put the installer or git clone there.
+It needs to be writable, as files are put there by installations and updates.
 
-If you want to participate in MagLev development, or just live on the
-bleeding edge, you can clone the MagLev github repository, i.e. `git
-clone git://github.com/MagLev/maglev.git` To use it, you need to run
-install.sh at least once. After that, everytime you do a 'git pull' you
-need to run update.sh to ensure you have the corresponding GemStone 3.x
-binaries. Otherwise, you might get version skew that prevents MagLev
-from running correctly.  You'll have all the functionality of git,
-but unless you create a new clone for each release, you may be unable
-to revert to an earlier version.
+=== Installing the zipped version
 
-== Prerequisites
+We recommend this version unless you want to participate in MagLev development
+or want access to the absolute latest code. It changes more slowly than the
+github version, and it has undergone more testing.
 
-Some prerequisites must be installed on your machine before MagLev can
-run correctly. For details, see the Prerequisites[link:files/docs/prerequisites.html] file in the docs directory.
+You'll need to know a version number to install.
+The initial MagLev Alpha version was 22578. You may discover later versions on 
+Twitter[http://twitter.com/maglev] or the {MagLev Discussion Google Group}[http://groups.google.com/group/maglev-discussion].
 
-== Documentation
+First, download and unzip the installer from
+http://maglev.gemstone.com/files/MagLev-installer.zip
 
-To generate the HTML version of this and other documentation:
+The first time you install MagLev use <tt>installMaglev.sh</tt>. It
+checks that your hardware will run MagLev, and sets appropriate shared
+memory settings. It's safe to run multiple times, it won't overwrite
+things it's already done. Subsequently, use <tt>upgradeMaglev.sh</tt>. 
+It skips the checks run by <tt>installMaglev.sh</tt>. You must supply the
+version number as a parameter, <em>e.g.</em>
+  ./installMaglev.sh 22578
+  ./upgradeMaglev.sh 22578
 
-cd to the directory holding this README
-  $ rake rdoc
-open html/index.html in your web browser of choice
+The installer is somewhat verbose. That's so you can more easily debug
+installation problems.
 
-== Quick Start
-=== Install MagLev
+Note: This installer/updater creates a separate (sub)directory for
+each new version of MagLev. Reverting to an older version is as simple as
+stopping maglev, changing $MAGLEV_HOME to point to the prior version, and restarting.
 
-Once you've downloaded MagLev by running
-<tt>installMaglev.sh</tt> or <tt>upgradeMaglev.sh</tt>,
-set your <tt>MAGLEV_HOME</tt> and <tt>PATH</tt> variables:
+=== Installing from the github repository
 
-  export MAGLEV_HOME=<path_to_the_directory_containing_this_README>
-  export PATH=$MAGLEV_HOME/bin:$PATH
+This version is best for MagLev contributors and for developers who 
+want to live on the bleeding edge or use git functionality. It can be less stable
+than the zipped version.
 
-It can also be useful to put any frequently used MagLev options (like "-d" or "-MtraceLoad")
-in the environment variable MAGLEV_OPTS so you don't have to type them on the command line,
-and executables like rackup, rake, etc. can use them without modifying those scripts.
+First, clone the MagLev github repository, <em>i.e.</em> 
+  git clone git://github.com/MagLev/maglev.git 
+and cd to the resulting directory.
 
-  export MAGLEV_OPTS="-d -MtraceLoad"
+To use MagLev, you need to run <tt>install.sh</tt> at least once.  After
+that, everytime you do a 'git pull' you need to run <tt>update.sh</tt>
+to ensure you have the corresponding GemStone 3.x binaries. Otherwise,
+you might get version skew that prevents MagLev from running correctly.
+I'll tweet about any 'git only' updates, but if you're more than one update
+behind you still might need to run <tt>update.sh</tt>.
+You don't need to know a version number to install. The installer/updater
+figures that out from the version.txt file.
 
-run "maglev-ruby --help" to see possible options.
+You'll have all the functionality of git, but unless you create a new
+clone for each release, you may be unable to revert to an earlier version.
+Why? The install/upgrade script creates a new copy of the MagLev data
+repository including persistent kernel code. The scripts make one level of backup, but
+we won't be providing migration scripts during Alpha.
 
-=== Start the MagLev server
+== Running maglev
 
-The server is started with rake:
+Start the server by either running <tt>rake maglev:start</tt> from within your $MAGLEV_HOME directory tree, or running <tt>maglev start</tt> (which counts on $MAGLEV_HOME being set and $MAGLEV_HOME/bin being in your $PATH.
 
-     $ cd $MAGLEV_HOME
-     $ rake maglev:start
+Useful commands include <tt>maglev-irb</tt>, <tt>maglev-ruby</tt>, and <tt>maglev-gem</tt>. MagLev code is in <tt>src</tt>, examples are in <tt>examples</tt>, some docs are in <tt>html</tt>. You'll find a few README files, too. 
 
-=== Check status of MagLev server
+Stop the server by running <tt>rake maglev:stop</tt> or <tt>maglev stop</tt>.
 
-To check that the MagLev Server started correctly,
-run <tt>rake maglev:status</tt>, or simply, <tt>rake</tt>:
+== Hints
 
-  $ cd $MAGLEV_HOME
-  $ rake maglev:status
+MagLev has {ACID transactions}[http://en.wikipedia.org/wiki/ACID].
+To share persistent objects between two running
+VM's you need to make use of <tt>Maglev.commit_transaction</tt> and
+<tt>Maglev.abort_transaction</tt>.
+Read the persistence-api docs for more info.
 
-If the server is not running, you'll see output like:
-
-  (in /congo1/users/monty/MagLev/MagLev-22152.Linux)
-  maglev not running
-
-If a server is running, you'll see output like:
-
-  (in /congo1/users/monty/MagLev/MagLev-22152.Linux)
-  Status  Version    Owner    Pid   Port   Started     Type  Name
-  ------ --------- --------- ----- ----- ------------ ------ ----
-    OK   3.0.0     monty     26354 33413 Aug 19 11:32 Stone  maglev
-
-=== <tt>maglev-ruby</tt>: Execute a Ruby file
-
-You should now be able to run a simple ruby script:
-
-  $ cat > hello.rb
-  puts "Hello from MagLev"
-  ^D
-  $ maglev-ruby hello.rb
-  Hello from MagLev
-  $
-
-=== <tt>maglev-irb</tt>: Open an interactive maglev shell
-
-MagLev now includes a slightly modified copy of irb called maglev-irb. References in this documentation to maglev-irb currently apply to a deprecated maglev-irb version. We'll update the docs soon.
-
-MagLev provides an IRB-like utility, <tt>$MAGLEV_HOME/bin/maglev-irb</tt>.
-It provides a minimal interactive environment with some limitations:
-
-  $ maglev-irb
-  >> 1 + 1
-  => 2
-  *> puts "Hi"
-  Hi
-  => nil
-  *> ^D
-  $
-
-
-See {<tt>maglev-irb</tt>}[link:files/docs/maglev-irb.html] for details.
-
-
-== Next Steps
-
-=== Examples
-
-You can try running the scripts in the +examples+ directory. 
-
-==== Webrick
-A simple example that starts a webrick server which you can connect
-to at http://localhost:2000/.  To run the script, make sure
-<tt>maglev-ruby</tt> is on your path, and then:
-
-  $ $MAGLEV_HOME/examples/webrick/time_server.rb
-
-^C will terminate the webrick server VM.
-
-== Further reading
-
-The following documentation explains more:
-
-{Release Notes}[link:files/docs/release_notes.html]::  Notes on and limitations of the current release.
-Server[link:files/docs/maglev-server.html]::  How to start and stop the MagLev server.
-Debug[link:files/docs/debugging.html]::      How to run MagLev in debug mode
-Layout[link:files/docs/file_layout.html]::   Guide to the MagLev distribution file layout
-Specs[link:files/docs/rubyspecs.html]::      Running +mspec+ and +rubyspecs+ with MagLev
-Rake[link:files/docs/rake.html]::            Rake tasks for MagLev
-{<tt>maglev-irb</tt>}[link:files/docs/maglev-irb.html]:: MagLev interactive utility
-Troubleshooting[link:files/docs/troubleshooting.html]:: Solutions for common problems
-Prerequisites[link:files/docs/prerequisites.html]:: External software needed by MagLev
-{Persistence API}[link:files/docs/persistence-api.html]:: Persistence and transactions
-{Smalltalk FFI}[link:files/docs/smalltalk_ffi.html]:: GemStone Smalltalk FFI
-{MySQL Driver}[link:files/docs/mysql_driver.html]:: MySQL driver
-Benchmarks[link:files/docs/benchmarks.html]:: Ruby Benchmark Suite benchmarks
-Applications[link:files/docs/applications.html]:: Sample Ruby apps we're testing in MagLev
-
-== Hints:
-* set <tt>MAGLEV_HOME</tt> to the full path of this directory, and add
-  <tt>$MAGLEV_HOME/bin</tt> to your <tt>PATH</tt>. Then you can use
-  <tt>maglev-ruby</tt> etc. from anywhere.
-
-== Ruby code:
-* <tt>src/</tt> and <tt>src/lib/</tt> are both on the require path
-* <tt>src/kernel/</tt> has the core +Array+, +String+ etc. files
-
+Don't install the rake gem in MagLev. Leave it in MRI or another ruby. You start MagLev using rake, and it won't work to have it in MagLev.
