--- a/README.rdoc
+++ b/README.rdoc
@@ -38,7 +38,7 @@ installation problems.
 
 Note: This installer/updater creates a separate (sub)directory for
 each new version of MagLev. Reverting to an older version is as simple as
-stopping maglev, changing $MAGLEV_HOME to point to the prior version, and restarting.
+stopping MagLev, changing $MAGLEV_HOME to point to the prior version, and restarting.
 
 === Installing from the github repository
 
@@ -65,7 +65,7 @@ Why? The install/upgrade script creates a new copy of the MagLev data
 repository including persistent kernel code. The scripts make one level of backup, but
 we won't be providing migration scripts during Alpha.
 
-== Running maglev
+== Running MagLev
 
 Start the server by either running <tt>rake maglev:start</tt> from within your $MAGLEV_HOME directory tree, or running <tt>maglev start</tt> (which counts on $MAGLEV_HOME being set and $MAGLEV_HOME/bin being in your $PATH.
 
@@ -73,12 +73,39 @@ Useful commands include <tt>maglev-irb</tt>, <tt>maglev-ruby</tt>, and <tt>magle
 
 Stop the server by running <tt>rake maglev:stop</tt> or <tt>maglev stop</tt>.
 
-== Hints
+== Tips and troubleshooting
 
-MagLev has {ACID transactions}[http://en.wikipedia.org/wiki/ACID].
-To share persistent objects between two running
-VM's you need to make use of <tt>Maglev.commit_transaction</tt> and
-<tt>Maglev.abort_transaction</tt>.
-Read the persistence-api docs for more info.
+* MagLev has {ACID transactions}[http://en.wikipedia.org/wiki/ACID].
+  To share persistent objects between two running
+  VM's you need to make use of <tt>Maglev.commit_transaction</tt> and
+  <tt>Maglev.abort_transaction</tt>.
+  Read the persistence-api docs for more info.
 
-Don't install the rake gem in MagLev. Leave it in MRI or another ruby. You start MagLev using rake, and it won't work to have it in MagLev.
+* rake needs to be in your PATH. It's needed to install and to bootstrap MagLev.
+  The MagLev installer expects rake to be in /usr/bin/rake. You shouldn't install
+  rake into MagLev -- it won't work.
+
+* If you get this error:
+    rake aborted!
+    Don't know how to build task 'maglev:start'
+  it indicates /usr/bin/rake wasn't found during installation and so important
+  steps were skipped. You can re-run the installer, or try this:
+    rake stone:create[maglev]
+
+* RubyGems 1.3.5 is preinstalled. The command to use it is "maglev-gem". For
+  example: "maglev-gem install sinatra" will install both Sinatra and Rack
+  into MagLev. Gems that use C extensions won't work. Many other gems may 
+  install, but not work correctly at this time. :-(
+
+* If you get an error like this when running "maglev-gem":
+    line 8: require: command not found 
+  it indicates your system thinks "maglev-gem" is a shell script.
+  The first line of "maglev-gem" should be:
+    #!/usr/bin/env maglev-ruby
+  If it's not, either reinstall MagLev or correct the first line of
+  bin/maglev-gem
+
+* You need to start MagLev before running "maglev-ruby", "maglev-gem", maglev-irb". Either
+  "rake maglev:start" or "maglev start" will do that. While not strictly required it's better to
+  stop MagLev before turning off your machine. i.e. "rake maglev:stop" or "maglev stop".
+
