--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,7 @@ or want access to the absolute latest code. It changes more slowly than the
 github version, and it has undergone more testing.
 
 You'll need to know a version number to install.
-The initial MagLev Alpha version was 22578. You may discover later versions on 
+The MagLev Alpha version on 27-Nov-09 is 22603. Check for later versions on 
 Twitter[http://twitter.com/maglev] or the {MagLev Discussion Google Group}[http://groups.google.com/group/maglev-discussion].
 
 First, download and unzip the installer from
@@ -30,8 +30,8 @@ memory settings. It's safe to run multiple times, it won't overwrite
 things it's already done. Subsequently, use <tt>upgradeMaglev.sh</tt>. 
 It skips the checks run by <tt>installMaglev.sh</tt>. You must supply the
 version number as a parameter, <em>e.g.</em>
-  ./installMaglev.sh 22578
-  ./upgradeMaglev.sh 22578
+  ./installMaglev.sh 22603
+  ./upgradeMaglev.sh 22603
 
 The installer is somewhat verbose. That's so you can more easily debug
 installation problems.
