--- a/examples/persistence/gstore/README
+++ b/examples/persistence/gstore/README
@@ -4,30 +4,29 @@ comments in gstore.rb for more details.
 
 To run this example:
 
-1: Ensure MagLev is running
+1: Ensure the MagLev Server is running
 
 2: Run the main.rb script:
 
-     $ mruby main.rb
+     $ rake maglev   #  OR: maglev-ruby main.rb
            user     system      total        real
-     write  1.940000   0.070000   2.010000 (  9.077902)
-     read   0.000000   0.000000   0.000000 (  0.001899)
-     r/w    0.150000   0.080000   0.230000 ( 13.876143)
+     write  2.100000   0.090000   2.190000 ( 10.003894)
+     read   0.010000   0.000000   0.010000 (  0.002009)
+     r/w    0.180000   0.100000   0.280000 ( 13.342341)
 
      $ maglev-ruby --version
-     maglev 0.6 (ruby 1.8.6) (2009-07-15 rev 21935-929) [i386-darwin9.7.0]
+     maglev 0.6 (ruby 1.8.6) (2009-11-30 rev 22603-1069) [i386-darwin9.8.0]
 
-3: You can also run main.rb using MRI, or another ruby impleentation:
+3: You can also run main.rb using MRI, or another ruby implementation:
 
-     $ ruby main.rb
+     $ rake mri      # OR: ruby main.rb
            user     system      total        real
-     write 21.830000   6.860000  28.690000 ( 39.075893)
-     read   3.970000   1.340000   5.310000 (  7.510127)
-     r/w   96.270000  19.500000 115.770000 (136.750766)
+     write 22.080000   6.980000  29.060000 ( 38.752457)
+     read   4.820000   1.390000   6.210000 (  8.351888)
+     r/w   91.140000  20.190000 111.330000 (132.180585)
 
      $ ruby --version
      ruby 1.8.6 (2008-08-11 patchlevel 287) [i686-darwin9.6.0]
-
 
 
 
