--- a/examples/persistence/README.rdoc
+++ b/examples/persistence/README.rdoc
@@ -1,8 +1,14 @@
+= MagLev Persistence Examples
+
 This directory contains demos using MagLev persistence.
+
+== GStore
 
 The gstore directory is a demo of how you might implement the standard ruby
 PStore library using MagLev persistence, rather than the filesystem and
 marshal.  It is a proof of concept only.
+
+== KDTree
 
 kdtree contains a pure Ruby implementation of a KD Tree (a
 multi-dimensional binary tree).  The demo shows how to search for the
@@ -10,5 +16,7 @@ nearest items to a given location.  The database of known locations (postal
 codes, coffee shops, etc.) is stored persistently in a pure ruby data
 structure within MagLev.
 
+== Indexing
 
+This is an example of how to index an unordered collection.
 
