--- a/examples/persistence/kdtree/README.rdoc
+++ b/examples/persistence/kdtree/README.rdoc
@@ -10,10 +10,22 @@ with a latitude and longitude.
 
 The demo.rb file is a Sinatra application that allows you to enter a
 latitude and longitude (preferably, within the US, if you're using the US
-Postal Database), and will find the nearest K zip codes to the lat/lon.  To
-run the app, just run rake:
+Postal Database), and will find the nearest K zip codes to the lat/lon.  
+
+To run the app, just run rake:
 
   $ rake
+
+But first: Make sure the maglev server has been started:
+
+  $ cd $MAGLEV_HOME
+  $ rake maglev:start
+
+and make sure Sinatra has been installed:
+
+  $ maglev-gem install sinatra
+
+The demo will show up in Sinatra at: http://localhost:3333/
 
 == Profile Ruby Code
 
