Clean up .ru file so it runs correctly with mri and maglev.

--- a/src/experimental/web/README.rdoc
+++ b/src/experimental/web/README.rdoc
@@ -16,10 +16,19 @@ To start the MagLev SCGI process:
 
   $ rake maglev
 
-
 Then, from another shell, start lighttpd:
 
   $ rake server
 
 You should then be able to connect to http://localhost:3000/foo.scgi
+
+== Profiling MagLev
+
+The <tt>rack_app.rb</tt> file contains a simple rack based app that can be
+used in conjunction with the <tt>abprof</tt> rake task to profile MagLev in
+a web environment.  In three separate shells:
+
+  $ maglev-ruby rack_app.rb    # start maglev in an scgi instance
+  $ rake server                # start lighttpd talking to scgi
+  $ rake abprof                # profile maglev
 
